rate-limit/httpbin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ratelimit-test
  labels:
    istio-injection: enabled
