rate-limit/httpbin/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: "ratelimit-test"
spec:
  mtls:
    mode: STRICT
