rate-limit/httpbin/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: ratelimit-test
spec:
  selector:
    istio: ingressgateway # istio-systemに存在する前提
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - ratelimit.example.com
