rate-limit/httpbin/traffic-management.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
  namespace: ratelimit-test
spec:
  gateways:
  - gateway
  hosts:
  - '*'
  http:
  - match:
    - port: 443
    name: "https-ratelimit"
    route:
    - destination:
        host: httpbin.ratelimit-test.svc.cluster.local
        port:
          number: 80
      headers:
        request:
          set:
            x-forwarded-port: "443"
            x-forwarded-proto: https

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin
  namespace: ratelimit-test
spec:
  host: httpbin.ratelimit-test.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
